--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,5 @@
-$main-bg-gradient: linear-gradient(203deg, #1b4c5a,#282d33);
+$isabelline: #f2f1ef;
+$quick-silver: #b1a6a4;
+$auro-metal-saurus: #6e7f80;
+$light-gray: #d8cfd0;
+$black-olive: #413f3d;
