feat: add styles for header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,1 +1,24 @@
 @import '../../styles/variables';
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+  background-color: $quick-silver;
+  box-shadow: 0 5px 5px -5px rgba($quick-silver, 0.6);
+
+  &__navigation {
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+  }
+
+  .logo {
+    font-style: italic;
+
+    &__second-word {
+      color: $black-olive;
+    }
+  }
+}
