--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,5 +3,11 @@
 body {
   margin: 0;
   
+  color: $isabelline;
   background-color: $light-gray;
+}
+
+a {
+  color: $isabelline;
+  text-decoration: none;
 }
