feat: header styles and show current page

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -18,6 +18,12 @@
     &:hover {
       color: rgba($black-olive, 0.6);
     }
+
+    &_active {
+      color: $auro-metal-saurus;
+      
+      text-decoration: underline 2px;
+    }
   }
 
   .logo {
