--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,1 +1,35 @@
 @import '../../styles/variables';
+
+.search {
+  &__wrapper {
+    width: 50%;
+  }
+
+  &__input {
+    width: 100%;
+    padding: 7px 5px;
+
+    font-size: medium;
+    font-weight: 500;
+
+    color: $auro-metal-saurus;
+    background: none;
+    border: 2px solid $quick-silver;
+    border-top: 2px solid rgba($quick-silver, .6);
+    border-left: 2px solid rgba($quick-silver, .8);
+    border-radius: 15px;
+
+    outline: none;
+    caret-color: $quick-silver;
+
+    &:focus {
+      box-shadow: 4px 4px 8px 0 $quick-silver;
+    }
+
+    &::placeholder {
+      font-style: italic;
+
+      color: rgba($auro-metal-saurus, .6);
+    }
+  }
+}
