--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,6 +15,8 @@
   }
 
   &__link {
+    transition: $transition;
+
     &:hover {
       color: rgba($black-olive, 0.6);
     }
@@ -31,6 +33,8 @@
 
     &__second-word {
       color: $black-olive;
+
+      transition: $transition;
 
       &:hover {
         color: $auro-metal-saurus;
