--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -40,11 +40,23 @@ $max-width: 250px;
 
   &__header {
     align-items: center;
-    height: 3rem;
+    height: 2.7rem;
+    padding-top: 5px;
     
     font-weight: 500;
 
     color: $darker-quick-silver;
+  }
+
+  &__name {
+    display: -moz-box;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-clamp: 2;
+    -moz-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 
   &__description {
