feat: add card example and photo load

--- a/src/pages/Form/Form.scss
+++ b/src/pages/Form/Form.scss
@@ -2,6 +2,7 @@
 
 .form-container {
   display: flex;
+  gap: 2rem;
   align-items: center;
   justify-content: center;
   height: 100%;
@@ -9,5 +10,11 @@
   .form {
     display: flex;
     flex-direction: column;
+  }
+
+  .card{
+    &__wrapper {
+    height: 300px;
+    }
   }
 }
