--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -43,6 +43,7 @@ $max-width: 250px;
     display: grid;
     grid-template: 'category popularity'
                    'name name';
+    height: 4.3rem;
     padding-top: 5px;
     
     font-weight: 500;
